bernstein/project/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  labels:
    app: "poll"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
      metadata:
        labels:
          app: "poll"
      spec:
        restartPolicy: Always
        containers:
        - image: epitechcontent/t-dop-600-poll:k8s
          name: poll
          resources:
            limits:
              memory: "128M"
          ports:
          - containerPort: 80
