bernstein/project/postgres.deployment.yaml
apiVersion: extensions/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: postgreSQL
    spec:
      restartPolicy: Always
      containers:
        - image: postgres:12
          name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
