bernstein/project/result.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: result
  labels:
    app: "result"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: "result"
    spec:
      restartPolicy: Always
      containers:
      - image: epitechcontent/t-dop-600-result:k8s
        name: result
        resources:
            limits:
              memory: 128M
        ports:
        - containerPort: 80
