bernstein/project/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    spec:
      restartPolicy: Always
      containers:
      - image: traefik:1.7
        name: traefik
        ports:
        - containerPort: 80
