bernstein/project/worker.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        role: master
    spec:
      restartPolicy: Always
      containers:
        - image: epitechcontent/t-dop-600-worker:k8s
          name: worker
          resources:
            limits:
              memory: 256Mi
          ports:
            - containerPort: 80
