bernstein/project/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: poll
