bernstein/project/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: result
