bernstein/project/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: traefik
