bernstein/project/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metedata:
  name: result-ingress
spec:
  rules:
  - host: result.dop.io
  - http:
      paths:
      - path: /result
        backend:
          service:
            name: result
            port:
              number: 30021
